Item283: One line in French .po file is too long for the WebLeftBar removing the "une" make the create new page fit within one bullet without wrapping According to my beloved Diane the omission of the une is OK and better than the ugly wrapping
git-svn-id: http://svn.foswiki.org/trunk@1726 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -948,7 +948,7 @@ msgstr "Créer la page de test <nop>TestTopic###"
 #: ../PatternSkin/data/_default/WebLeftBar.txt:4
 #: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:4
 msgid "Create New Topic"
-msgstr "Créer une nouvelle page"
+msgstr "Créer nouvelle page"
 
 #: ../PatternSkin/data/System/PatternSkinWebCreateNewTopicTemplate.txt:43
 #: ../core/data/System/WebCreateNewTopicTemplate.txt:6
