Item283: updated copyright
git-svn-id: http://svn.foswiki.org/trunk@1730 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/es.po
+++ b/core/locale/es.po
@@ -1,7 +1,7 @@
 # Foswiki translation for Spanish
 # Translators:
 #   Foswiki:Main/MiguelABayona, 2006.
-#   Foswiki:Main/WillNorris, 2005, 2006
+#   Foswiki:Main/WillNorris, 2005, 2006, 2008
 #   Marco Antonio Gonzalez Parra, 2006
 #   Foswiki:Main/SebastianKlus, 2008
 msgid ""
