Item645: added translators
git-svn-id: http://svn.foswiki.org/trunk@1746 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -21,7 +21,9 @@ The following people are identified as authors of Foswiki:
 | Arthur Clemens       | Foswiki:Main.ArthurClemens     | Netherlands |
 | Andre Ulrich         | Foswiki:Main.AndreUlrich       | Germany     |
 | Ben Beijer           | Foswiki:Main.BenBeijer         | Netherlands |
+| Carlinhos Cecconi    | Foswiki:Main.CarlinhosCecconi  | Brazil      |
 | Crawford Currie      | http://c-dot.co.uk             | UK          |
+| Erik Aman            | Foswiki:Main.ErikAman          | Sweden      |
 | Eugen Mayer          | Foswiki:Main.EugenMayer        | Germany     |
 | George Clark         | Foswiki:Main.GeorgeClark       | USA         |
 | Gilmar Santos Jr     | Foswiki:Main.GilmarSantosJr    | Brazil      |
@@ -32,6 +34,7 @@ The following people are identified as authors of Foswiki:
 | Martin Cleaver       | Foswiki:Main.MartinCleaver     | Canada      |
 | Michael Daum         | Foswiki:Main.MichaelDaum       | Germany     |
 | Olivier Raginel      | Foswiki:Main.OlivierRaginel    | France      |
+| Raul F Rodriguez     | Foswiki:Main.RaulFRodriguez    | France      |
 | Rob Manson           | Foswiki:Main.RobManson         | Australia   |
 | Sean McCarthy        | Foswiki:Main.SeanMcCarthy      | Australia   |
 | Sebastian Klus       | Foswiki:Main.SebastianKlus     | Costa Rica  |
