--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -2914,7 +2914,6 @@ msgstr ""
 "følgende:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
-#, fuzzy
 msgid ""
 "To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
@@ -3185,11 +3184,10 @@ msgstr ""
 "Advarsel: Kan ikke INCLUDE %1 flere ganger, siden er allerede inkludert. %2"
 
 #: core/templates/messages.tmpl:459
-#, fuzzy
 msgid ""
 "Warning: Can't INCLUDE '%1', path is empty or contains illegal characters."
 msgstr ""
-"Advarsel: Kan ikke bruke INCLUDE '%1' flere ganger, siden er allerede inkludert. %2"
+"Advarsel: Kan ikke bruke INCLUDE '%1', stien er tom eller inneholder ulovlige tegn."
 
 
 #: core/templates/messages.tmpl:457
