Item8003: Thanks to Sean for fix
git-svn-id: http://svn.foswiki.org/trunk@1752 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -37,6 +37,7 @@ The following people are identified as authors of Foswiki:
 | Raul F Rodriguez     | Foswiki:Main.RaulFRodriguez    | France      |
 | Rob Manson           | Foswiki:Main.RobManson         | Australia   |
 | Sean McCarthy        | Foswiki:Main.SeanMcCarthy      | Australia   |
+| Sean Morgan          | Foswiki:Main.SeanMorgan        | Canada      |
 | Sebastian Klus       | Foswiki:Main.SebastianKlus     | Costa Rica  |
 | Sven Dowideit        | Foswiki:Main.SvenDowideit      | Australia   |
 | Will Norris          | Foswiki:Main.WillNorris        | Mexico      |
