Item645: minor copy edits for clarification. Also, since there does not appear to be a consensus on considering the product as a whole to be jointly authored by all contributors, specified that each contributor holds the copyright for his/her own contributions. (If the community agrees that all contributors should hold copyright in the product as a whole, then the statement of joint copyright can be restored.)
git-svn-id: http://svn.foswiki.org/trunk@1753 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -1,20 +1,22 @@
 Foswiki is a development of the Foswiki community.
 
-Foswiki is based on TWiki<sup>&reg;</sup>, which was written by Peter Thoeny, who
-based his work on Jos Wiki and parts of Ward Cunningham's original Wiki.
-Over the years TWiki has been maintained, extended and rewritten
-by TWiki contributors, whos names are included below. TWiki is a trademark
-of Peter Thoeny.
+Foswiki is based on TWiki<sup>&reg;</sup>, which was originally written by
+Peter Thoeny, who based his work on Jos Wiki and parts of Ward Cunningham's
+original Wiki.  Over the years TWiki has been maintained, extended and
+rewritten by many TWiki contributors, whose names are included below. TWiki is
+a registered trademark of Peter Thoeny.
 
-Foswiki is copyright as described in the file COPYRIGHT in the root of
+Foswiki is copyrighted as described in the file COPYRIGHT in the root of
 this distribution and is licensed under the terms of the GNU General Public
 License as described in the file LICENSE accompanying this notice. The people
-listed below are identified as joint copyright owners.
+listed below are identified as copyright owners of their contributions to
+Foswiki.
 
-A Foswiki contributor is defined as a person who has contributed:
-   * significant amounts of code (enhancements as well as bug fixing) that was taken into the Foswiki distribution, or
-   * considerably to the Foswiki documentation.
-   * performed the translation of strings into a language
+A Foswiki author is one who has submitted new or modified files to the Foswiki
+distribution. This includes the following:
+   * software files
+   * Foswiki documentation
+   * user interface translation files
 
 The following people are identified as authors of Foswiki:
 | *Name*               | *Contact*                      | *Country*   |
