Item645: Restore statement of joint copyright ownership, to maintain continuity.
git-svn-id: http://svn.foswiki.org/trunk@1754 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -9,8 +9,7 @@ a registered trademark of Peter Thoeny.
 Foswiki is copyrighted as described in the file COPYRIGHT in the root of
 this distribution and is licensed under the terms of the GNU General Public
 License as described in the file LICENSE accompanying this notice. The people
-listed below are identified as copyright owners of their contributions to
-Foswiki.
+listed below are identified as joint copyright owners.
 
 A Foswiki author is one who has submitted new or modified files to the Foswiki
 distribution. This includes the following:
