Item283: minor rephrasing, added missing accentuation
git-svn-id: http://svn.foswiki.org/trunk@1757 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2008-05-14 12:22-0300\n"
+"PO-Revision-Date: 2009-01-05 10:53+0100\n"
 "Last-Translator: André Ulrich <andre.ulrich@kontextwork.de>\n"
 "Language-Team: Foswiki German Translation Team <none>\n"
 "MIME-Version: 1.0\n"
@@ -621,8 +621,8 @@ msgid ""
 "After submitting this form, you will receive an e-mail with your new, "
 "*system-generated* password, and a link to a page where you can change it."
 msgstr ""
-"Nachdem Sie das Formular abschickt haben erhalten Sie eine E-Mail mit einem "
-"neuen, vom System generierten, Passwort und einen Verweis zu der Seite, wo "
+"Nachdem Sie das Formular abschickt haben erhalten Sie eine E-Mail mit Ihrem "
+"neuen *vom System generierten* Passwort und einen Verweis zu der Seite, wo "
 "Sie das Passwort ändern können."
 
 #: core/data/System/WebSearch.txt:33 core/data/System/WebSearchAdvanced.txt:42
