Item283: fix 'history' tooltip display
git-svn-id: http://svn.foswiki.org/trunk@1759 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -3689,7 +3689,7 @@ msgstr "title='トピックを確認します' accesskey='v'>トピック確認"
 #: core/templates/viewtopicactionbuttons.tmpl:33
 #: core/templates/viewtopicactionbuttons.tmpl:35
 msgid "title='View total topic history' accesskey='h'>&History"
-msgstr "title=''トピックの履歴を確認します' accesskey='h'>履歴"
+msgstr "title='トピックの履歴を確認します' accesskey='h'>履歴"
 
 #: core/lib/Foswiki.pm:4269
 msgid "user list truncated"
