Item664: Adding Kenneth's twiki2foswiki to the developer tool box on SVN This both works in an SVN checkout and in a non SVN copy. Remember it does not do code comments and the text in the .txt files so plan another 5 minutes manual work before you start. Do not upload name space converted extensions to foswiki.org unless you have tested that they work. In fact do not even check them in on svn before you know have tested them. We want our Foswiki extensions repository to be of a higher quality than we had on TWiki.
git-svn-id: http://svn.foswiki.org/trunk@1767 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/README
+++ b/core/tools/README
@@ -15,6 +15,9 @@ The tools directory contains the following:
       * When run in an SVN checkout area, links all the twikiplugins into the core source tree, so they look as if they are installed.
    * plugins_conformance_analyser.pl
       * Generates the plugins standards conformance report Plugins.PluginsConformanceReport
+   * twiki2foswiki
+      * A script that will do 95-99% of the work of converting an extension from TWiki namespace to Foswiki. You will still need to manually update doc work and comments in the code as required. 
+
 ---++ a full TWikiFor builder and installer
    * builddistros.pl
    * distro
